criado diretiva para validação/ validado parcialmente todos os formulários/ criado rotina de saída de item/ realizado alguns ajustes nos layouts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-sidenav></app-sidenav>
 <router-outlet></router-outlet>
 <p-toast></p-toast>
+<p-confirmDialog [closeOnEscape]="true"
+                 [closable]="true"
+                 [baseZIndex]="999"
+                 acceptLabel="Sim"
+                 rejectLabel="Não"></p-confirmDialog>
