--- a/src/app/grupo/grupo.form.component.html
+++ b/src/app/grupo/grupo.form.component.html
@@ -32,6 +32,8 @@
               <input type="text"
                      id="descricao"
                      name="descricao"
+                     required
+                     validation
                      class="form-control"
                      [(ngModel)]="object.descricao"
                      pInputText>
