--- a/src/app/compra/compra.form.component.html
+++ b/src/app/compra/compra.form.component.html
@@ -120,52 +120,56 @@
           </div>
 
           <div class="col-md-1">
-            <button type="button"
-                    class="form-control"
-                    (click)="insertItem()"
-                    mat-stroked-button>
-              <mat-icon>arrow_back_ios</mat-icon>
-            </button>
+            <div class="form-group">
+              <label class="invisible">Inserir</label>
+              <button type="button"
+                      class="form-control"
+                      style="height: 35px"
+                      (click)="insertItem()"
+                      mat-stroked-button>
+                <mat-icon>arrow_back_ios</mat-icon>
+              </button>
+            </div>
           </div>
         </div>
 
         <div *ngIf="object?.compraItem?.length > 0" class="example-container mat-elevation-z8">
-          <table #table="matTable" mat-table [dataSource]="object.compraItem">
+          <mat-table #table="matTable" [dataSource]="object.compraItem">
             <ng-container matColumnDef="item">
-              <th mat-header-cell *matHeaderCellDef> Item </th>
-              <td mat-cell *matCellDef="let itemCompra"> {{itemCompra.item.nome}} </td>
-              <td mat-footer-cell *matFooterCellDef> Total </td>
+              <mat-header-cell *matHeaderCellDef> Item </mat-header-cell>
+              <mat-cell *matCellDef="let itemCompra"> {{itemCompra.item.nome}} </mat-cell>
+              <mat-footer-cell *matFooterCellDef> Total </mat-footer-cell>
             </ng-container>
 
             <ng-container matColumnDef="qtde">
-              <th mat-header-cell *matHeaderCellDef> Qtde </th>
-              <td mat-cell *matCellDef="let itemCompra" edita> {{itemCompra.qtde}} </td>
-              <td mat-footer-cell *matFooterCellDef> {{getQtdeTotal()}} </td>
+              <mat-header-cell *matHeaderCellDef> Qtde </mat-header-cell>
+              <mat-cell *matCellDef="let itemCompra"> {{itemCompra.qtde}} </mat-cell>
+              <mat-footer-cell *matFooterCellDef> {{getQtdeTotal()}} </mat-footer-cell>
             </ng-container>
 
             <ng-container matColumnDef="valor">
-              <th mat-header-cell *matHeaderCellDef> Valor </th>
-              <td mat-cell *matCellDef="let itemCompra"> {{itemCompra.valor | currency}} </td>
-              <td mat-footer-cell *matFooterCellDef> {{getTotalCompra() | currency}} </td>
+              <mat-header-cell *matHeaderCellDef> Valor </mat-header-cell>
+              <mat-cell *matCellDef="let itemCompra"> {{itemCompra.valor | currency}} </mat-cell>
+              <mat-footer-cell *matFooterCellDef> {{getTotalCompra() | currency}} </mat-footer-cell>
             </ng-container>
 
-            <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef> Opções </th>
-              <td mat-cell *matCellDef="let itemCompra">
+            <ng-container matColumnDef="actionsForm">
+              <mat-header-cell *matHeaderCellDef> Opções </mat-header-cell>
+              <mat-cell *matCellDef="let itemCompra">
                 <button class="btn btn-outline-primary rounded"
                         type="button"
                         pTooltip="Remover"
                         (click)="removeItem(itemCompra.item.id)">
                   <i class="fa fa-trash-o"></i>
                 </button>
-              </td>
+              </mat-cell>
               <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
-          </table>
+            <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            <mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></mat-footer-row>
+          </mat-table>
         </div>
 
         <div class="row">
