--- a/src/app/item/item.form.component.html
+++ b/src/app/item/item.form.component.html
@@ -137,6 +137,7 @@
                      required
                      validation
                      class="form-control"
+                     [disabled]="object.id"
                      [(ngModel)]="object.saldo"
                      pInputText>
             </div>
