--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="d-flex justify-content-between">
+<mat-toolbar color="primary" class="d-flex justify-content-between" style="height: 50px">
   <div>
     <span>Sistema de Gerenciamento do DAINF</span>
   </div>
