--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,38 +1,38 @@
 <div class="container w-100 h-100 d-flex justify-content-center align-items-center">
-<!--  <div [style]="{backgroundColor: 'blue', height: '10px'}"></div>-->
   <div class="col-md-5">
-    <mat-card>
-      <mat-card-header class="justify-content-center" style="margin: 25px 0 45px 0;">
-        <mat-card-title>
-          <span>Sistema Laboratório</span>
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <form #form (submit)="login()">
-          <div class="row">
-            <div class="col-md-12">
-              <mat-form-field style="width: 100%">
-                <mat-label for="username">Usuário</mat-label>
-                <input type="text"
-                       id="username"
-                       name="username"
-                       [(ngModel)]="usuario.username"
-                       matInput>
-              </mat-form-field>
+    <mat-card style="width: 400px; height: 400px;" class="d-flex justify-content-between flex-column">
+      <div class="div-header">
+        <span>Sistema Laboratório</span>
+      </div>
+      <mat-card-content class="h-100">
+        <form #form (submit)="login()" class="d-flex flex-column justify-content-around h-100">
+          <div class="d-flex flex-column justify-content-center h-100">
+            <div class="row" style="margin: 10px 0">
+              <div class="col-md-12">
+                <mat-form-field style="width: 100%">
+                  <mat-label for="username">Usuário</mat-label>
+                  <input type="text"
+                         id="username"
+                         name="username"
+                         [(ngModel)]="usuario.username"
+                         matInput>
+                </mat-form-field>
+              </div>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-md-12">
-              <mat-form-field style="width: 100%">
-                <mat-label for="password">Senha</mat-label>
-                <input type="password"
-                       id="password"
-                       name="password"
-                       [(ngModel)]="usuario.password"
-                       matInput>
-              </mat-form-field>
+            <div class="row" style="margin: 10px 0">
+              <div class="col-md-12">
+                <mat-form-field style="width: 100%">
+                  <mat-label for="password">Senha</mat-label>
+                  <input type="password"
+                         id="password"
+                         name="password"
+                         [(ngModel)]="usuario.password"
+                         matInput>
+                </mat-form-field>
+              </div>
             </div>
+            <a href="#" class="text-center">Esqueceu sua senha?</a>
           </div>
 
           <div class="row justify-content-center">
@@ -40,7 +40,8 @@
               <button mat-stroked-button
                       type="submit"
                       class="w-100 br-25px"
-                      color="primary">Acessar</button>
+                      color="primary">Acessar
+              </button>
             </div>
           </div>
         </form>
